[project]
name = "blockgan"
version = "0.1.0"
description = "A CLI application for effectively managing moderation lists."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atproto>=0.0.56",
    "jsonargparse>=4.36.0",
    "pyrate-limiter>=3.7.0",
    "rich>=13.9.4",
    "ruff>=0.9.2",
    "sqlite-utils>=3.38",
]
